--- a/app/src/main/res/layout/activity_merchant_login.xml
+++ b/app/src/main/res/layout/activity_merchant_login.xml
@@ -136,8 +136,8 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="172dp"
-            android:text="New User?"
+            android:layout_marginEnd="140dp"
+            android:text="New Merchant?"
             android:textColor="#FEFEFE"
             app:layout_constraintBottom_toTopOf="@+id/button6"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -148,10 +148,10 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="193dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="191dp"
-        android:text="User Login"
+        android:layout_marginStart="121dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="121dp"
+        android:text="Merchant Login"
         android:textColor="@color/primary_pink"
         android:textSize="24sp"
         android:textStyle="bold"
