--- a/app/src/main/res/layout/activity_merchant_login.xml
+++ b/app/src/main/res/layout/activity_merchant_login.xml
@@ -121,7 +121,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/btn_6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="70dp"
@@ -139,7 +139,7 @@
             android:layout_marginEnd="140dp"
             android:text="New Merchant?"
             android:textColor="#FEFEFE"
-            app:layout_constraintBottom_toTopOf="@+id/button6"
+            app:layout_constraintBottom_toTopOf="@+id/btn_6"
             app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
