--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -121,12 +121,13 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/btn_6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="70dp"
             android:layout_marginTop="20dp"
             android:backgroundTint="@color/secondary_blue"
+            android:onClick="userSignUp"
             android:text="Sign-up"
             android:textColor="@color/black"
             app:layout_constraintStart_toEndOf="@+id/btn_login"
@@ -139,7 +140,7 @@
             android:layout_marginEnd="172dp"
             android:text="New User?"
             android:textColor="#FEFEFE"
-            app:layout_constraintBottom_toTopOf="@+id/button6"
+            app:layout_constraintBottom_toTopOf="@+id/btn_6"
             app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
