--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -29,7 +29,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/editTextTextEmailAddress"
+            android:id="@+id/ev_log_em"
             android:layout_width="300dp"
             android:layout_height="68dp"
             android:layout_marginStart="14dp"
@@ -77,7 +77,7 @@
         </TextView>
 
         <EditText
-            android:id="@+id/editTextTextPassword"
+            android:id="@+id/ev_log_ps"
             android:layout_width="300dp"
             android:layout_height="68dp"
             android:layout_marginStart="14dp"
@@ -115,6 +115,7 @@
             android:layout_marginStart="14dp"
             android:layout_marginTop="20dp"
             android:backgroundTint="@color/secondary_blue"
+            android:onClick="userLogin"
             android:text="Login"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
