--- a/app/src/main/res/layout/activity_merchant_register.xml
+++ b/app/src/main/res/layout/activity_merchant_register.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:onClick="redirectToMerchantRegister">
+    android:onClick="redirectToMerchantRegister"
+    android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
 
